# sakana-suisou

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  DEEPENING_PLAN.md  DEEPENING_PLAN_v2.md  README.ja.md  README.md  README.zh.md  pyproject.toml  test_orchestration.py  test_request_builder.py
fugu_vibe/: __init__.py  __main__.py
fugu_vibe/agent/: __init__.py  loop.py  registry.py
fugu_vibe/api/: __init__.py  client.py  request_builder.py  stream_parser.py
fugu_vibe/cli/: __init__.py  main.py
fugu_vibe/cli/commands/: attach.py  auth.py  cancel.py  config.py  dashboard.py  mcp.py  models.py  run.py  status.py  submit.py  vibe.py  voice.py
fugu_vibe/config/: __init__.py  settings.py
fugu_vibe/context/: __init__.py  index.py  manager.py  session_store.py
fugu_vibe/core/: __init__.py  attachments.py  checkpoints.py  effort.py  event_bus.py  event_log.py  headless.py  instructions.py  orchestration.py  patch_capture.py  session_output.py  task_manager.py  token_budget.py
fugu_vibe/mcp/: __init__.py  client.py  store.py  tools.py
fugu_vibe/safety/: __init__.py  classifier.py
fugu_vibe/tools/: __init__.py  files.py  git.py  patch.py  terminal.py
fugu_vibe/ui/: __init__.py  components.py  dashboard.py
fugu_vibe/utils/: __init__.py  git.py  logging.py
fugu_vibe/voice/: __init__.py  pipeline.py  recorder.py  stt.py
tests/: test_agent_loop_audit.py  test_context_phase_b.py  test_dashboard_status_mapping.py  test_fugu_phase_d.py  test_orchestration.py  test_phase_e.py  test_request_builder.py  test_safety_phase_c.py  test_task_manager_phase_b.py  test_task_observability.py  test_tools_phase_a.py
